syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.file.rpc.block";
option java_outer_classname = "DownloadBlocksProtos";

message DownloadBlockData {
  bytes data = 1;
}

message DownloadBlocksSegmentInfo {
  int32 start_index = 1;
  int32 end_index = 2;
}

message DownloadBlockRequest {
  string file_id = 1;
  optional DownloadBlocksSegmentInfo segment_info = 2;
  optional string source_id = 3;
}

message DownloadBlocksInfo {
  int32 index = 1;
  repeated DownloadBlockData data = 2;
}
// Download Block Response
message DownloadBlockResponse {
  message CheckMessage {
    int32 response_count = 1;
    int64 valid_bytes = 2;
    string check_value = 3;
    int64 file_length = 4;
  }

  // Download Message
  //
  // Note: If the file does not exist it should be treated as an error
  // and not included in the response body.
  oneof download_message {
    CheckMessage check_message = 1;
    DownloadBlocksInfo download_blocks = 2;
  }
}

service BlockDownloadService {
  rpc downloadBlocks(DownloadBlockRequest)
      returns (stream DownloadBlockResponse);
}
